/**
 * Copyright (C) 2014-2016 Open Whisper Systems
 *
 * Licensed according to the LICENSE file in this repository.
 */

syntax = "proto2";

package signalservice;

option java_package = "org.thoughtcrime.securesms.devicelist.protos";

message DeviceName {
  optional bytes ephemeralPublic = 1;
  optional bytes syntheticIv     = 2;
  optional bytes ciphertext      = 3;
}
